--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
   "name": "workshop89feb",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "license": "MIT",
-  "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
   }
 }
